refactor(store.py): support multiple database
